# Personnel-Service-of-the-Kingdom

./: README.md  TZ.md  docker-compose.yml  pyproject.toml
app/: admin.py  decorators.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
app/management/commands/: create_data.py  test.py
app/migrations/: 0001_initial.py  0002_add_trigger_20250214.py  0003_alter_subject_king_notification.py
app/templates/: auth.html  main.html  notifications.html  reg.html  test.html  test_result.html
docker/: Dockerfile  uwsgi.ini
project/: settings.py  urls.py
