[tool.poetry]
name = "psotk"
version = "0.1.0"
description = ""
authors = ["bulat <bulatsubuh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
